[package]
name = "redirectionio-cloudflare-worker"
version = "2.9.0"
authors = ["hello@redirection.io"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }
futures-util = { version = "0.3.31", default-features = false }
redirectionio = { version = "=3.0.0-beta.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
worker = "0.5.0"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[profile.release]
lto = true
opt-level = 3
