[package]
name = "redirectionio-cloudflare-worker"
version = "3.2.0"
authors = ["hello@redirection.io"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde", "wasmbind"] }
futures-util = { version = "0.3.32", default-features = false }
redirectionio = { version = "=3.2.0", default-features = false }
serde_json = "1.0.149"
worker = "0.8.0"

[profile.release]
lto = true
opt-level = 3
strip = false
codegen-units = 1
